--- a/main.html
+++ b/main.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Testimonial Section</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <section class="testimonial-section">
+        <div class="testimonial">
+            <p>"This platform helped me improve my coding skills. The tasks are simple and very practical."</p>
+            <p class="author">— Alex Johnson</p>
+        </div>
+
+        <div class="testimonial">
+            <p>"Excellent learning experience! The instructions are clear and easy to follow."</p>
+            <p class="author">— Sarah Williams</p>
+        </div>
+
+        <div class="testimonial">
+            <p>"Highly recommended for beginners who want to practice real-world web design tasks."</p>
+            <p class="author">— David Miller</p>
+        </div>
+    </section>
 
 </body>
-
 </html>
+
